--- a/homeworks/assignment0_05_nn_from_scratch/modules.ipynb
+++ b/homeworks/assignment0_05_nn_from_scratch/modules.ipynb
@@ -199,7 +199,11 @@
     "        Just write a little loop. \n",
     "        \"\"\"\n",
     "\n",
-    "        # Your code goes here. ################################################\n",
+    "        self.y = [self.modules[0].forward(input)]\n",
+    "        for i in range(1, len(self.modules)):\n",
+    "            self.y.append(self.modules[i].forward(self.y[-1]))\n",
+    "            \n",
+    "        self.output = self.y[-1]\n",
     "        return self.output\n",
     "\n",
     "    def backward(self, input, gradOutput):\n",
@@ -223,8 +227,13 @@
     "        !!!\n",
     "        \n",
     "        \"\"\"\n",
-    "        # Your code goes here. ################################################\n",
-    "        return self.gradInput\n",
+    "        self.gradInput = [self.modules[-1].backward(self.y[-2], gradOutput)]\n",
+    "        for i in range(len(self.modules) - 2, 0, -1):\n",
+    "            self.gradInput.append(self.modules[i].backward(self.y[i-1], self.gradInput[-1]))\n",
+    "                        \n",
+    "        self.gradInput.append(self.modules[0].backward(input, self.gradInput[-1]))\n",
+    "        \n",
+    "        return self.gradInput[-1]\n",
     "      \n",
     "\n",
     "    def zeroGradParameters(self): \n",
@@ -310,18 +319,18 @@
     "        \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.output = ...\n",
+    "        self.output = np.dot(input, self.W.T) + self.b\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.gradInput = ...\n",
+    "        self.gradInput = gradOutput.dot(self.W)\n",
     "        return self.gradInput\n",
     "    \n",
     "    def accGradParameters(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.gradW = ... ; self.gradb = ...\n",
-    "        pass\n",
+    "        self.gradW = gradOutput.T.dot(input)\n",
+    "        self.gradb = gradOutput.sum(axis=0)\n",
     "    \n",
     "    def zeroGradParameters(self):\n",
     "        self.gradW.fill(0)\n",
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -369,10 +378,13 @@
     "        self.output = np.subtract(input, input.max(axis=1, keepdims=True))\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = np.exp(self.output)/np.sum(np.exp(self.output), axis=1, keepdims=True)\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        pred_grad = np.multiply(self.output, gradOutput)\n",
+    "        self.gradInput = pred_grad - np.multiply(self.output, np.sum(pred_grad, axis=1, keepdims=True))\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -394,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -409,10 +421,15 @@
     "        self.output = np.subtract(input, input.max(axis=1, keepdims=True))\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = self.output - np.log(np.sum(np.exp(self.output), axis=1, keepdims=True))\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        input_new_exp = np.exp(np.subtract(input, input.max(axis=1, keepdims=True)))\n",
+    "        self.gradInput = gradOutput\n",
+    "        self.gradInput -= np.multiply(input_new_exp/np.sum(input_new_exp, axis=1, keepdims=True),\n",
+    "                                      np.sum(gradOutput, axis=1, keepdims=True))\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -442,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -457,12 +474,36 @@
     "        self.moving_variance = None\n",
     "        \n",
     "    def updateOutput(self, input):\n",
-    "        # Your code goes here. ################################################\n",
-    "        # use self.EPS please\n",
+    "        # Your code goes here. ################################################        \n",
+    "        if self.training:\n",
+    "            batch_mean = np.mean(input, axis=0, keepdims=True)\n",
+    "            batch_variance = np.var(input, axis=0, keepdims=True)\n",
+    "            self.output = (input - batch_mean) / np.sqrt(batch_variance + self.EPS)\n",
+    "            \n",
+    "            if self.moving_mean is None:\n",
+    "                self.moving_mean = batch_mean\n",
+    "            else:\n",
+    "                self.moving_mean = self.moving_mean * self.alpha + batch_mean * (1 - self.alpha)\n",
+    "                \n",
+    "            if self.moving_variance is None:\n",
+    "                self.moving_variance = batch_variance\n",
+    "            else:\n",
+    "                self.moving_variance = self.moving_variance * self.alpha + batch_variance * (1 - self.alpha)           \n",
+    "        else:\n",
+    "            self.output = (input - self.moving_mean) / np.sqrt(self.moving_variance + self.EPS)\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        mean = np.mean(input, axis=0, keepdims=True)\n",
+    "        var = np.var(input, axis=0, keepdims=True)\n",
+    "        n = input.shape[0]\n",
+    "        shifted_input = input - mean\n",
+    "        \n",
+    "        d_var = np.sum(gradOutput * shifted_input * (-1/2) * np.power(var + self.EPS, -3/2), axis=0)\n",
+    "        d_mean = (np.sum(gradOutput * (-1.0 / np.sqrt(var + self.EPS)), axis=0))\n",
+    "        \n",
+    "        self.gradInput = gradOutput * (1.0 / np.sqrt(var + self.EPS)) + d_var * (2 * shifted_input) / n + d_mean / n\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -471,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -542,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,10 +596,19 @@
     "        \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
+    "        if (self.training == True):\n",
+    "            if (self.p == 0):\n",
+    "                self.mask = np.ones(input.shape)\n",
+    "            else:\n",
+    "                self.mask = np.random.binomial(1, 1 - self.p, input.shape)\n",
+    "            self.output = np.divide(np.multiply(input, self.mask), (1 - self.p))\n",
+    "        else:\n",
+    "            self.output = input\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = np.multiply(gradOutput, self.mask / (1 - self.p))\n",
     "        return self.gradInput\n",
     "        \n",
     "    def __repr__(self):\n",
@@ -581,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -613,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,10 +675,13 @@
     "        \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = np.where(input <= 0, self.slope * input, input)\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        input_= np.where(input > 0, 1, self.slope)\n",
+    "        self.gradInput = np.multiply(gradOutput, input_)\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -645,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -659,10 +712,12 @@
     "        \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = input * (input >= 0) + self.alpha * (input < 0) * (np.exp(input) - 1)\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = gradOutput * (1 * (input >= 0) + (self.alpha * np.exp(input)) * (input < 0))\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -679,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -691,10 +746,13 @@
     "    \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = np.log(1 + np.exp(input))\n",
     "        return  self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = np.divide(np.exp(input), (1 + np.exp(input)))\n",
+    "        self.gradInput = np.multiply(self.gradInput, gradOutput)\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -717,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,6 +887,7 @@
     "        input_clamp = np.clip(input, self.EPS, 1 - self.EPS)\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = - np.sum(np.multiply(target, np.log(input_clamp)))/input.shape[0]\n",
     "        return self.output\n",
     "\n",
     "    def updateGradInput(self, input, target):\n",
@@ -837,6 +896,7 @@
     "        input_clamp = np.clip(input, self.EPS, 1 - self.EPS)\n",
     "                \n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = - np.divide(target , (input_clamp*input.shape[0]))\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -857,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -870,10 +930,12 @@
     "        \n",
     "    def updateOutput(self, input, target): \n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = - np.sum(np.multiply(target, input))/input.shape[0]\n",
     "        return self.output\n",
     "\n",
     "    def updateGradInput(self, input, target):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = - target/input.shape[0]\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -900,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,6 +1027,9 @@
     "            #np.add(... , out=var_first_moment)\n",
     "            #np.add(... , out=var_second_moment)\n",
     "            #current_var -= ...\n",
+    "            np.add(config['beta1'] * var_first_moment, (1 - config['beta1']) * current_grad, out=var_first_moment)\n",
+    "            np.add(config['beta2'] * var_second_moment, (1 - config['beta2']) * np.multiply(current_grad, current_grad), out=var_second_moment)\n",
+    "            current_var -= lr_t * var_first_moment / (np.sqrt(var_second_moment) + config['epsilon'])\n",
     "            \n",
     "            # small checks that you've updated the state; use np.add for rewriting np.arrays values\n",
     "            assert var_first_moment is state['m'].get(var_index)\n",
@@ -1001,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,9 +1228,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3 research env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_research"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1177,7 +1242,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
