--- a/homeworks/assignment0_05_nn_from_scratch/test_modules.ipynb
+++ b/homeworks/assignment0_05_nn_from_scratch/test_modules.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_BatchNormalization (__main__.TestLayers) ... ok\n",
+      "test_ClassNLLCriterion (__main__.TestLayers) ... ok\n",
+      "test_ClassNLLCriterionUnstable (__main__.TestLayers) ... ok\n",
+      "test_Dropout (__main__.TestLayers) ... ok\n",
+      "test_ELU (__main__.TestLayers) ... ok\n",
+      "test_LeakyReLU (__main__.TestLayers) ... ok\n",
+      "test_Linear (__main__.TestLayers) ... ok\n",
+      "test_LogSoftMax (__main__.TestLayers) ... ok\n",
+      "test_Sequential (__main__.TestLayers) ... FAIL\n",
+      "test_SoftMax (__main__.TestLayers) ... ok\n",
+      "test_SoftPlus (__main__.TestLayers) ... ok\n",
+      "test_adam_optimizer (__main__.TestLayers) ... ok\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_Sequential (__main__.TestLayers)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_25708/3899686301.py\", line 166, in test_Sequential\n",
+      "    self.assertTrue(np.allclose(torch_layer_output_var.data.numpy(), custom_layer_output, atol=1e-6))\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 12 tests in 0.463s\n",
+      "\n",
+      "FAILED (failures=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=12 errors=0 failures=1>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestLayers(unittest.TestCase):\n",
     "    def test_Linear(self):\n",
@@ -439,9 +481,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_Conv2d (__main__.TestAdvancedLayers) ... ERROR\n",
+      "test_MaxPool2d (__main__.TestAdvancedLayers) ... ERROR\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_Conv2d (__main__.TestAdvancedLayers)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_25708/3182513238.py\", line 23, in test_Conv2d\n",
+      "    self.assertTrue(np.allclose(torch_layer_output_var.data.numpy(), custom_layer_output, atol=1e-6))\n",
+      "  File \"<__array_function__ internals>\", line 180, in allclose\n",
+      "  File \"/home/tester/.local/lib/python3.10/site-packages/numpy/core/numeric.py\", line 2265, in allclose\n",
+      "    res = all(isclose(a, b, rtol=rtol, atol=atol, equal_nan=equal_nan))\n",
+      "  File \"<__array_function__ internals>\", line 180, in isclose\n",
+      "  File \"/home/tester/.local/lib/python3.10/site-packages/numpy/core/numeric.py\", line 2373, in isclose\n",
+      "    yfin = isfinite(y)\n",
+      "TypeError: ufunc 'isfinite' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_MaxPool2d (__main__.TestAdvancedLayers)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_25708/3182513238.py\", line 61, in test_MaxPool2d\n",
+      "    self.assertTrue(np.allclose(torch_layer_output_var.data.numpy(), custom_layer_output, atol=1e-6))\n",
+      "  File \"<__array_function__ internals>\", line 180, in allclose\n",
+      "  File \"/home/tester/.local/lib/python3.10/site-packages/numpy/core/numeric.py\", line 2265, in allclose\n",
+      "    res = all(isclose(a, b, rtol=rtol, atol=atol, equal_nan=equal_nan))\n",
+      "  File \"<__array_function__ internals>\", line 180, in isclose\n",
+      "  File \"/home/tester/.local/lib/python3.10/site-packages/numpy/core/numeric.py\", line 2373, in isclose\n",
+      "    yfin = isfinite(y)\n",
+      "TypeError: ufunc 'isfinite' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.005s\n",
+      "\n",
+      "FAILED (errors=2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=2 failures=0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestAdvancedLayers(unittest.TestCase):\n",
     "    def test_Conv2d(self):\n",
@@ -540,7 +634,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
